# dep-compose

./: .gitignore  Cargo.toml  README.md  config.py  dry-run.py  environment.yml  hyperparams.conf  make_model.py  model.py  tf-test.py
composer/: conll_corpus.py  data.py  model.py  train.py  utils.py
scripts/: count_dep_types.py  create-np-training-data.py
src/: as-text.rs  main.rs  nn.rs  parse.rs
tst/: dry-run.py  model.py
writeup/: bibliography.bib  compile  writeup.tex
