[package]
name = "dep-compose"
version = "0.1.0"
authors = ["Peter Schoener <peter.c.schoener@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.14.0", features = ["tensorflow_gpu"] }

[[bin]]
name = "train"
path = "src/main.rs"

[[bin]]
name = "as-text"
path = "src/as-text.rs"
